--- a/AppRickYMorty/gradle/libs.versions.toml
+++ b/AppRickYMorty/gradle/libs.versions.toml
@@ -8,11 +8,10 @@ espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.6.1"
 activityCompose = "1.8.0"
 composeBom = "2024.04.01"
-navigationComposeVersion = "1.7.3"
-kotlinxSerializationVersion = "1.6.3"
 okHttp = "4.11.0"
 retroFit = "2.11.0"
 gson = "2.10.1"
+junitJunit = "4.12"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -29,13 +28,12 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
-androidx-navigation-compose = {module = "androidx.navigation:navigation-compose", version.ref = "navigationComposeVersion"}
-kotlinx-serialization-json = { module = "org.jetbrains.kotlin:kotlin-serialization-json", version.ref="kotlinxSerializationVersion"}
 squareup-okhttp3 = {group="com.squareup.okhttp3", name = "okhttp", version.ref = "okHttp"}
 squareup-retrofit = {group="com.squareup.retrofit2", name = "retrofit", version.ref = "retroFit"}
 squareup-kotlinx-serialization = {group="com.squareup.retrofit2", name = "converter-kotlinx-serialization", version.ref = "retroFit"}
 google-gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 retrofit-gson-converter = { group = "com.squareup.retrofit2", name = "converter-gson", version = "2.11.0" }
+junit-junit = { group = "junit", name = "junit", version.ref = "junitJunit" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
